test/1.4/errors/T_ESYNTAX_with.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR ESYNTAX
param with;
